cmake_minimum_required(VERSION 3.25)
project(Love_Babbar_DSA)

set(CMAKE_CXX_STANDARD 23)

add_executable(module01 module01.cpp)
add_executable(module02 module02.cpp)
add_executable(module03 module03.cpp)
add_executable(module04 module04.cpp)
add_executable(module05 module05.cpp)
add_executable(module06 module06.cpp)
add_executable(module07 module07.cpp)
add_executable(module08 module08.cpp)
#add_executable(module09 module09.cpp)
#add_executable(module10 module10.cpp)